hashmaps3/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:86:2
   |
86 | }
   |  ^ consider adding a `main` function to `src/main.rs`

warning: unused variable: `team_1_name`
  --> src/main.rs:33:13
   |
33 |         let team_1_name = v[0].to_string();
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_team_1_name`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `team_1_score`
  --> src/main.rs:34:13
   |
34 |         let team_1_score: u8 = v[2].parse().unwrap();
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_team_1_score`

warning: unused variable: `team_2_name`
  --> src/main.rs:35:13
   |
35 |         let team_2_name = v[1].to_string();
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_team_2_name`

warning: unused variable: `team_2_score`
  --> src/main.rs:36:13
   |
36 |         let team_2_score: u8 = v[3].parse().unwrap();
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_team_2_score`

warning: variable does not need to be mutable
  --> src/main.rs:29:9
   |
29 |     let mut scores: HashMap<String, Team> = HashMap::new();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0601`.
warning: `format_check` (bin "format_check") generated 5 warnings
error: could not compile `format_check` (bin "format_check") due to 1 previous error; 5 warnings emitted

[!] Source code format check: FAILED
